html and css initialized

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz Challenge</title>
     <link rel="stylesheet" href="./assets/style.css" />
+    <script src="https://kit.fontawesome.com/7f23a2002a.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="quiz"></div>
-    <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
-    <script src="./assets/script.js"></script>
+    <div class="container">
+      <div id="home" class="flex-column flex-center">
+        <h1>Are you Ready?</h1>
+        <a href="/game.html" class="btn">Play</a>
+        <a href="/highscores.html" id="highscore-btn" class="btn">High Scores
+          <i class="fas fa-crown"></i>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
