game style added

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
-    <link rel="gamestylesheet" type="text/css" href="./assets/game.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/game.css" />
 </head>
 <body>
     <div class="container">
