--- a/game.html
+++ b/game.html
@@ -19,6 +19,14 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
+                <div id="timer-container" class="hud-prefix">
+                    <p class="hud-prefix">
+                        Timer
+                    </p>
+                    <h1 class="hud-main-text" id="timer-num">
+                        100
+                    </h1>
+                </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
                         Score
